# ACS_Independent_Project

Track B/: hardware_blockqueue.sv  hardware_build.bat  main.c  performance_counters.c  performance_counters.h
Track B/Notes/: general_ideas.md
Track_A/: CMakeLists.txt  README.md  experimental_analysis.md
Track_A/scripts/: comprehensive_results.csv  correctness_validation.md  correctness_validation_results.csv  density_break_even.csv  performance_summary.csv  plot_results.py  roofline_analysis.csv  run_experiments.bat  speedup_analysis.csv  working_set_transitions.csv
Track_A/scripts/raw_data/: cache_characterization.csv  comprehensive_results.csv  correctness_validation_results.csv  density_break_even.csv  performance_summary.csv  roofline_analysis.csv  speedup_analysis.csv  working_set_transitions.csv
Track_A/src/: benchmark.cpp  benchmark.h  dense_gemm.cpp  dense_gemm.h  main.cpp  matrix.cpp  matrix.h  sparse_spmm.cpp  sparse_spmm.h  utils.cpp  utils.h
Track_B/: 70_cpu_commands.txt  README.md  analysis.py  cpu_commands.txt  disk_trace.etl  hardware_blockqueue.sv  hardware_output.txt  involved_hardware_blockqueue.sv  io_tracer.c  main.c  main_copy.c  outputting_hardware_blockqueue.sv  report.md  run_io_trace.bat  software_build.bat  software_cpu_commands.txt  software_output.txt  workload_commands.txt
Track_B/Commands/: 7_cpu_commands.txt
Track_B/Notes/: baseline_understanding.md  brainstorm_dump.md  helpful_links.md  literature_notes3.md  literature_overview.md  literature_review.md  literature_review1.md  literature_review2.md  literature_review3.md  (+2 more)
(+2 files in other folders)
